# micropython_pulse_and_frequency_counting_experiments

./: README.md  analyze.py  esp32_freq.py  frequency_counter.py  main.py  pulse_count.py  pulse_count_v2.py  pulse_count_v3.py  pyproject.toml
src/freq_count/: esp32_freq.py  frequency_counter.py  main.py  pulse_count.py  pulse_count_v2.py  pulse_count_v4.py  pulse_width_measure.py  pulse_width_measure_photon_impl.py  runner.py
